Update Sandra Shroff Gnyan Dham School.html

--- a/`school website/Sandra Shroff Gnyan Dham School.html
+++ b/`school website/Sandra Shroff Gnyan Dham School.html
@@ -468,22 +468,22 @@ New session 2019-20 has begun	 <br><br>
   <a href="https://www.youtube.com/watch?v=XDSqlgwifTk">
 <div class="grid-item">
   <img src="https://adityabhagat895.github.io/school/Screenshot%20(247).png" width="300px" height="200px"><br><br>
-  <p>EK BHARAT SHRESHTHA BHARAT Annual Function 2021   </p>
+  <p>EK BHARAT SHRESHTHA BHARAT Annual Function 2021  </p>
 </div></a>
 <a href="https://srsgnyandham.org/news_doc_file/75_LAKHS_POST_CARD.pdf"><div class="grid-item">
-  <img src="2.png" width="240px" height="200px">
+  <img src="https://adityabhagat895.github.io/school/`school website/2.PNG" width="240px" height="200px">
   <br><br>
   <p>75 LAKHS POST CARD CAMPAIGN AZADI AMRIT MAHOTSAV</p>
 </div></a>
-<a href="https://photos.app.goo.gl/nUxTgrrhHR1XY38o6"><div class="grid-item"><img src="3.jpeg" width="250px" height="250px">
+<a href="https://photos.app.goo.gl/nUxTgrrhHR1XY38o6"><div class="grid-item"><img src="https://adityabhagat895.github.io/school/`school website/3.jpeg" width="250px" height="250px">
   <br><br>
   <p>BLESSING CEREMONY FOR TERM - 1 BOARD EXAM   </p>
 </div></a>
 
-<a href="https://photos.app.goo.gl/wxkoqFVgvmHHCuhm6"><div class="grid-item" style="height: 460px"><img src="4.jpg" width="300px" height="300px">
+<a href="https://photos.app.goo.gl/wxkoqFVgvmHHCuhm6"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/4.jpg" width="300px" height="300px">
 <br><br>
   <p>FELICITATION PROGRAM OF SHRI KANU BHAI DESAI & MR. RAJJUBHAI SHROFF (DATED: 4/12/2021)      </p></div></a>
-<a href="https://srsgnyandham.org/news_doc_file/An_Interactive_session_on_screen.pdf"><div class="grid-item" style="height: 460px"><img src="5.png" width="300px" height="300px" >
+<a href="https://srsgnyandham.org/news_doc_file/An_Interactive_session_on_screen.pdf"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/5.png" width="300px" height="300px" >
 <br><br>
   <p>An Interactive session on screen time by Dr. Ashish Gusani Ophthalmologist (8/10/2021)   </p></div></a>
 <a href="https://youtu.be/PfBp-nrFC5U"><div class="grid-item" style="height: 460px"><img src="6.png" width="300px" height="300px">
