Update Sandra Shroff Gnyan Dham School.html

--- a/`school website/Sandra Shroff Gnyan Dham School.html
+++ b/`school website/Sandra Shroff Gnyan Dham School.html
@@ -480,13 +480,13 @@ New session 2019-20 has begun	 <br><br>
   <p>BLESSING CEREMONY FOR TERM - 1 BOARD EXAM   </p>
 </div></a>
 
-<a href="https://photos.app.goo.gl/wxkoqFVgvmHHCuhm6"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/4.jpg" width="300px" height="300px">
+<a href="https://photos.app.goo.gl/wxkoqFVgvmHHCuhm6"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/4.JPG" width="300px" height="300px">
 <br><br>
   <p>FELICITATION PROGRAM OF SHRI KANU BHAI DESAI & MR. RAJJUBHAI SHROFF (DATED: 4/12/2021)      </p></div></a>
-<a href="https://srsgnyandham.org/news_doc_file/An_Interactive_session_on_screen.pdf"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/5.png" width="300px" height="300px" >
+<a href="https://srsgnyandham.org/news_doc_file/An_Interactive_session_on_screen.pdf"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/5.PNG" width="300px" height="300px" >
 <br><br>
   <p>An Interactive session on screen time by Dr. Ashish Gusani Ophthalmologist (8/10/2021)   </p></div></a>
-<a href="https://youtu.be/PfBp-nrFC5U"><div class="grid-item" style="height: 460px"><img src="6.png" width="300px" height="300px">
+<a href="https://youtu.be/PfBp-nrFC5U"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/6.png" width="300px" height="300px">
 <br><br>
   <p>GANDHI TO MAHATMA ( Gandhi Jayanti Celebration 01/10/2021 )   </p></div></a>
 
