Update Sandra Shroff Gnyan Dham School.html

--- a/`school website/Sandra Shroff Gnyan Dham School.html
+++ b/`school website/Sandra Shroff Gnyan Dham School.html
@@ -467,7 +467,7 @@ New session 2019-20 has begun	 <br><br>
 <div id="grid-parent">	
   <a href="https://www.youtube.com/watch?v=XDSqlgwifTk">
 <div class="grid-item">
-  <img src="https://adityabhagat895.github.io/school/Screenshot%20(247).png" width="300px" height="200px"><br><br>
+  <img src="https://adityabhagat895.github.io/school/`school website/6.png" width="300px" height="200px"><br><br>
   <p>EK BHARAT SHRESHTHA BHARAT Annual Function 2021  </p>
 </div></a>
 <a href="https://srsgnyandham.org/news_doc_file/75_LAKHS_POST_CARD.pdf"><div class="grid-item">
@@ -486,7 +486,7 @@ New session 2019-20 has begun	 <br><br>
 <a href="https://srsgnyandham.org/news_doc_file/An_Interactive_session_on_screen.pdf"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/5.PNG" width="300px" height="300px" >
 <br><br>
   <p>An Interactive session on screen time by Dr. Ashish Gusani Ophthalmologist (8/10/2021)   </p></div></a>
-<a href="https://youtu.be/PfBp-nrFC5U"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/6.png" width="300px" height="300px">
+<a href="https://youtu.be/PfBp-nrFC5U"><div class="grid-item" style="height: 460px"><img src="https://adityabhagat895.github.io/school/`school website/7.png" width="300px" height="300px">
 <br><br>
   <p>GANDHI TO MAHATMA ( Gandhi Jayanti Celebration 01/10/2021 )   </p></div></a>
 
